chore: Remove large build artifacts and update gitignore
- Removed target/debug/ directory (contains files >100MB)
- Updated .gitignore to exclude Rust/Anchor build artifacts
- Keeping only essential deployed binaries

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,12 @@ Thumbs.db
 
 # Docker
 docker-compose.override.yml
+
+# Rust/Anchor build artifacts
+**/target/debug/
+**/target/release/
+**/target/deploy/*.so
+**/target/deploy/*-keypair.json
+**/target/sbpf-solana-solana/
+**/.anchor/
+**/test-ledger/
