feat: Implement tracing middleware for enhanced request tracking
feat: Create FinancialProgram model with necessary attributes and relationships

feat: Create ProgramParticipation model to manage user participation in financial programs

feat: Create TokenTransaction model for tracking token transactions

feat: Register MYXN services in the service provider for dependency injection

feat: Create migration for financial_programs table with relevant fields

feat: Create migration for program_participations table to track user participation

feat: Create migration for token_transactions table to log transactions

feat: Seed initial financial programs data for testing and development

--- a/anchor-presale/Anchor.toml
+++ b/anchor-presale/Anchor.toml
@@ -17,7 +17,7 @@ anchor_presale = "7RMrnnQC1pckXgLWdqw6mqQT5QSmyUSKjcsHmTt5CTQV"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
