--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -69,3 +69,60 @@ TWILIO_FROM=+1234567890
 
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+
+# ===========================================
+# MYXN Token & Financial Programs Configuration
+# ===========================================
+
+# MYXN Token Settings
+MYXN_TOKEN_MINT=6S4eDdYXABgtmuk3waLM63U2KHgExcD9mco7MuyG9f5G
+MYXN_TOKEN_DECIMALS=9
+MYXN_TOTAL_SUPPLY=1000000000
+
+# Solana Network Configuration
+SOLANA_NETWORK=mainnet-beta
+SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+SOLANA_WORKER_URL=http://localhost:3001
+
+# MyXen Foundation Official Wallets
+MYXN_TREASURY_WALLET=Azvjj21uXQzHbM9VHhyDfdbj14HD8Tef7ZuC1p7sEMk9
+MYXN_BURN_WALLET=HuyT8sNPJMnh9vgJ43PXU4TY696WTWSdh1LBX53ZVox9
+MYXN_CHARITY_WALLET=DDoiUCeoUNHHCV5sLT3rgFjLpLUM76tLCUMnAg52o8vK
+MYXN_HR_WALLET=Hv8QBqqSfD4nC6N8qZBo7iJE9QiHLnoXJ6sV2hk1XpoR
+MYXN_MARKETING_WALLET=4egNUZa2vNBwmc633GAjworDPEJD2F1HK6pSvMnC3WSv
+
+# Service Wallet Allocation Percentages
+MYXN_CHARITY_ALLOCATION=30
+MYXN_HR_ALLOCATION=40
+MYXN_MARKETING_ALLOCATION=30
+
+# Platform Fee Configuration
+MYXN_PLATFORM_FEE_ENABLED=true
+MYXN_PLATFORM_FEE_PERCENTAGE=2.0
+
+# ===========================================
+# OpenTelemetry Tracing Configuration
+# ===========================================
+OTEL_ENABLED=true
+OTEL_SERVICE_NAME=myxn-api
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+OTEL_LOG_LEVEL=info
+OTEL_TRACES_SAMPLER=parentbased_traceidratio
+OTEL_TRACES_SAMPLER_ARG=1.0
+
+# ===========================================
+# Financial Programs Configuration
+# ===========================================
+# Staking Program
+MYXN_STAKING_APY=10.0
+MYXN_STAKING_MIN_AMOUNT=100
+MYXN_STAKING_LOCK_DAYS=30
+
+# Lending Program
+MYXN_LENDING_APY=8.0
+MYXN_LENDING_MIN_AMOUNT=500
+
+# Savings Program
+MYXN_SAVINGS_APY=5.0
+MYXN_SAVINGS_MIN_AMOUNT=50
